# intriq

./: README.md  package-lock.json  pyproject.toml  requirements.txt  requirements2.txt
backend/: main.py  requirements.txt
frontend/: .env.development  README.md  index.html  package-lock.json  package.json  schema.json  tailwind.config.js  tsconfig.json
frontend/src/: main.tsx
frontend/src/components/root/: App.tsx  Main.tsx
frontend/src/components/router/: Router.tsx
frontend/src/components/screens/: 404.tsx  CompanySetup.tsx  DashboardExample.tsx  DataConnect.tsx  DataConnectAdd.tsx  Index.tsx  InitiativeTracking.tsx  InsightDiscovery.tsx  Start.tsx
frontend/src/components/shared/: Loadable.tsx  Navbar.tsx
intriqenv/: pyvenv.cfg
src/intriq/: knowledge_graphs.py  knowledge_graphs_utils.py  nodes_and_edges.py  pdf_query.py
src/intriq/demo/: chat.py  company_dashboard.py  data_connection_dashboard.py  data_dict.py  demo_main.py  identify_dashboard.py  nodes_and_edges.py  tracking_dashboard.py  utils.py
src/intriq/demo/components/: add_company.py  data_connector.py  knowledge_graph.py  playbook.py
src/intriq/demo/dashboards/: analyse.py  data_connection.py  overview.py  tracking.py
src/intriq/notebooks/: pandl_read.ipynb
src/intriq/notebooks/wandb/: latest-run
src/intriq/notebooks/wandb/run-20231121_122810-bz9b3wgy/: run-bz9b3wgy.wandb
src/intriq/notebooks/wandb/run-20231121_125450-o26h9lq1/: run-o26h9lq1.wandb
src/intriq/notebooks/wandb/run-20231121_193732-vyj1k11m/: run-vyj1k11m.wandb
(+11 files in other folders)
