[project]
name = "intriq"
version = "0.1.0"
description = "the future baby"
authors = [
    {name = "Sam Leighton", email = "sam@intriq.ai"},
]
dependencies = [
    "ipykernel>=6.27.0",
    "openai>=1.3.4",
    "wandb>=0.16.0",
    "docker>=6.1.3",
    "streamlit>=1.28.2",
    "langchain>=0.0.339",
    "langchain-experimental>=0.0.42",
    "openpyxl>=3.1.2",
    "tabulate>=0.9.0",
    "nltk>=3.8.1",
    "sklearn>=0.0.post11",
    "scikit-learn>=1.3.2",
    "unstructured[pdf]>=0.11.0",
    "unstructured-inference>=0.7.15",
    "chromadb>=0.4.18",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.5.1",
    "Cython>=3.0.6",
    "detectron2 @ git+https://github.com/facebookresearch/detectron2.git",
    "torch>=2.1.1",
    "torchvision>=0.16.1",
    "pdm @ git+https://github.com/pdm-project/pdm.git@main",
    "fitz>=0.0.1.dev2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
start.env_file = ".env"
